views.py 모델 경로 수정, 웹 페이지 수정

--- a/mainpage/firstpage/templates/video_second.html
+++ b/mainpage/firstpage/templates/video_second.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv = "refresh" content = "13; url = http://127.0.0.1:8000/print_result/"></meta>
-    <title>증상을 말씀해주세요.</title>
+    <title>어떻게 아프세요?</title>
     <style>
         h1{text-align: center;}
     </style>
