--- a/mainpage/firstpage/templates/result.html
+++ b/mainpage/firstpage/templates/result.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>result</title>
+    <title>인식 결과입니다.</title>
     <style>
         .print_result{
-            margin-top:10%;
-            margin-left:30%;
+            margin-top:5%;
+            margin-left:33%;
             width:500px;
             height:300px;
             border:3px solid black;
@@ -18,14 +18,18 @@
         }
         .inputbutton{
             float:top;
-            margin-left:30%;
+            margin-left:33%;
             width:200px;
             height:50px;
             font-size:3ch;
         }
+
+        h1{text-align: center;}
     </style>
 </head>
 <body>
+    <br></br>
+    <h1>증상을 알려드릴게요</h1>
     <div class = "print_result">{{result}}</div>
     <button class = "inputbutton" onclick = "location.href = '/voice_record'">음성 인식</button>
 </body>
